Add filter rate to website
