# app/handlers/pidparams/dto.go
@@ -3,35 +3,38 @@ package handlers
 import "github.com/adrianozp/gaardrail/app/entities"
 
 type updatePIDParamsRequest struct {
-	Kp       *float64 `json:"kp"`
-	Ki       *float64 `json:"ki"`
-	Kd       *float64 `json:"kd"`
-	Min      *float64 `json:"min"`
-	Max      *float64 `json:"max"`
-	IClamp   *float64 `json:"i_clamp"`
-	Setpoint *float64 `json:"setpoint"`
+	Kp         *float64 `json:"kp"`
+	Ki         *float64 `json:"ki"`
+	Kd         *float64 `json:"kd"`
+	Min        *float64 `json:"min"`
+	Max        *float64 `json:"max"`
+	IClamp     *float64 `json:"i_clamp"`
+	Setpoint   *float64 `json:"setpoint"`
+	FilterSize *int     `json:"filter_size"`
 }
 
 func (r updatePIDParamsRequest) toPIDParams() entities.PIDParams {
 	return entities.PIDParams{
-		Kp:       r.Kp,
-		Ki:       r.Ki,
-		Kd:       r.Kd,
-		Min:      r.Min,
-		Max:      r.Max,
-		IClamp:   r.IClamp,
-		Setpoint: r.Setpoint,
+		Kp:         r.Kp,
+		Ki:         r.Ki,
+		Kd:         r.Kd,
+		Min:        r.Min,
+		Max:        r.Max,
+		IClamp:     r.IClamp,
+		Setpoint:   r.Setpoint,
+		FilterSize: r.FilterSize,
 	}
 }
 
 type pidParamsResponse struct {
-	Kp       float64 `json:"kp"`
-	Ki       float64 `json:"ki"`
-	Kd       float64 `json:"kd"`
-	Min      float64 `json:"min"`
-	Max      float64 `json:"max"`
-	IClamp   float64 `json:"i_clamp"`
-	Setpoint float64 `json:"setpoint"`
+	Kp         float64 `json:"kp"`
+	Ki         float64 `json:"ki"`
+	Kd         float64 `json:"kd"`
+	Min        float64 `json:"min"`
+	Max        float64 `json:"max"`
+	IClamp     float64 `json:"i_clamp"`
+	Setpoint   float64 `json:"setpoint"`
+	FilterSize int     `json:"filter_size"`
 }
 
 func pidParamsFromEntity(p entities.PIDParams) pidParamsResponse {
@@ -56,6 +59,9 @@ func pidParamsFromEntity(p entities.PIDParams) pidParamsResponse {
 	}
 	if p.Setpoint != nil {
 		r.Setpoint = *p.Setpoint
+	}
+	if p.FilterSize != nil {
+		r.FilterSize = *p.FilterSize
 	}
 	return r
 }
